macros/tests/compile-fail/bad_attr_parse.rs
use gluesql::FromGlueRow;

#[derive(FromGlueRow)]
struct S {
    #[glue]
    v: i32,
}

